Fix search result overflow

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -693,4 +693,8 @@ div .algolia-autocomplete {
   }
 }
 
+#algolia-autocomplete-listbox-0 {
+  min-width: 50vw;
+}
+
 @import "pygments.scss";
